--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "flux": "^2.0.1",
     "react": "^0.12.2",
     "superagent": "^0.21.0",
-    "immutable": "^3.4.1"
+    "immutable": "^3.4.1",
+    "node-uuid": "^1.4.2"
   },
   "devDependencies": {
     "jsx-loader": "^0.12.2",
